# UNITED

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  turnserver.conf
.planning/: IDENTITY-ARCHITECTURE.md  MILESTONES.md  PARALLEL-DEV.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SOCIAL-TRUST-ARCHITECTURE.md  STATE.md  v1.0-MILESTONE-AUDIT.md
server/: .dockerignore  Cargo.toml  Dockerfile  build.rs
server/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
server/src/admin/: mod.rs  settings.rs  setup.rs
server/src/auth/: challenge.rs  jwt.rs  middleware.rs  mod.rs  totp.rs
server/src/blocks/: crypto.rs  mod.rs  retention.rs  routes.rs  store.rs
server/src/channels/: crud.rs  mod.rs  ordering.rs  seed.rs
server/src/chat/: broadcast.rs  messages.rs  mod.rs  presence.rs  reactions.rs
server/src/db/: migrations.rs  mod.rs  models.rs
server/src/dm/: conversations.rs  keys.rs  messages.rs  mod.rs  offline.rs
server/src/identity/: blob.rs  mod.rs  registration.rs  rotation.rs
server/src/invite/: generate.rs  landing.rs  mod.rs  validate.rs
server/src/moderation/: ban.rs  kick.rs
server/src/p2p/: behaviour.rs  config.rs  directory.rs  identity.rs  messages.rs  mod.rs  swarm.rs
server/src/proto/: mod.rs
server/src/roles/: assignment.rs  crud.rs  mod.rs  permissions.rs
server/src/voice/: mod.rs  signaling.rs  state.rs  turn.rs
server/src/ws/: actor.rs  broadcast.rs  handler.rs  mod.rs  protocol.rs
server/tests/: auth_test.rs  channels_test.rs  e2e_test.py  invite_test.rs  moderation_test.rs  roles_test.rs  ws_test.rs
(+314 files in other folders)
