[package]
name = "united-server"
version = "0.1.0"
edition = "2021"
description = "UNITED coordination server"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
argon2 = "0.5"
aes-gcm = "0.10"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
totp-rs = { version = "5.7", features = ["qr", "gen_secret"] }
prost = "0.14"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rand = "0.9"
tower_governor = "0.6"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
bitflags = "2"
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
base32 = "0.5"
hostname = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[build-dependencies]
prost-build = "0.14"
